<resources>
    <string name="app_name">LetMePass</string>
    <string name="app_logo">*</string>
    <string name="app_version">0.1.0</string>
    <string name="empty_string"></string>
    <string name="database_filename_default">mydatabase.lmpdb</string>
    <string name="intro_new">New Database</string>
    <string name="intro_load_cloud">Open from Cloud</string>
    <string name="intro_load_device">Open from Device</string>
    <string name="intro_drive_error">Failed to open cloud database</string>
    <string name="decryption_label">Decrypt Database</string>
    <string name="decryption_instruction">
        Please enter the password to decrypt your database and access your passwords.
    </string>
    <string name="decryption_password_hint">Enter password</string>
    <string name="decryption_use_keyfile">This database needs a keyfile</string>
    <string name="decryption_decrypt">Decrypt</string>
    <string name="decryption_failed">Password incorrect or database corrupt</string>
    <string name="decryption_error_unknown">An unknown error occurred</string>
    <string name="decryption_error_corrupt">Database is corrupt</string>
    <string name="creation_label">Create New Database</string>
    <string name="creation_step1">
        Please choose the desired location of the password database.
    </string>
    <string name="creation_step2">
        Please enter a master password.\n\n<b>This password will be used to protect all of your
        other passwords,</b> so it should be strong.
    </string>
    <string name="creation_step3">
        <b>Recommended for advanced users only.</b>\nYou may wish to add a key file to add an extra
        layer of security to the database. Please note that if this key file is lost, <b>all data
        will be lost</b>.
    </string>
    <string name="creation_step4">
        Finally, please re-enter the master password to ensure that it was entered correctly.
    </string>
    <string name="creation_choose_cloud">Cloud storage with Google Drive</string>
    <string name="creation_choose_cloud_dialog_title">Create new database file</string>
    <string name="creation_choose_device">Device storage</string>
    <string name="creation_open_file">Choose file</string>
    <string name="creation_location">Location: %1$s</string>
    <string name="creation_location_null">none selected</string>
    <string name="creation_step_title">Step %1$d</string>
    <string name="creation_flags_explanation">Security recommendation:</string>
    <string name="creation_mp_hint">Master password</string>
    <string name="creation_breach_check">Check Breaches</string>
    <string name="creation_breach_checking">Checking...</string>
    <string name="creation_gen_keyfile">Generate Keyfile</string>
    <string name="creation_keyfile_continue">
        If you do not wish to create a keyfile, tap \'Next\'
        to continue.
    </string>
    <string name="creation_db_name_instruction">
        Optionally, you may choose a name for this database to identify it. You may also choose
        whether to load this database automatically when the app is launched.
    </string>
    <string name="creation_db_name_hint">Database name</string>
    <string name="creation_db_is_default">Load this database on app launch</string>
    <string name="creation_dialog_warning_title">Warning</string>
    <string name="creation_dialog_cancel">Go back</string>
    <string name="creation_dialog_continue">Continue</string>
    <string name="creation_dialog_create_file">Choose file name</string>
    <string name="creation_dialog_filename_hint">File name</string>
    <string name="creation_dialog_ok">OK</string>
    <string name="creation_creating_db">Creating your database&#8230;</string>
    <string name="creation_close_dialog_title">Are you sure?</string>
    <string name="creation_close_dialog_message">Are you sure you want to cancel creation?</string>
    <string name="creation_close_dialog_ok">Yes</string>
    <string name="creation_close_dialog_cancel">No</string>
    <string name="creation_warning_mp_blacklisted">
        This master password is blacklisted, as it is a commonly used password. It is strongly
        recommended that you go back and change it. Continue anyway?
    </string>
    <string name="creation_warning_mp_low_entropy">
        This master password is not very complex, and will be easily broken by an attacker. Are
        you sure you want to continue?
    </string>
    <string name="creation_error_no_cloud_location_chosen">Please choose a file</string>
    <string name="creation_error_no_device_location_chosen">Please choose a file</string>
    <string name="creation_error_no_mp">Please enter a password</string>
    <string name="creation_error_mp_too_short">Master password too short</string>
    <string name="creation_error_mp_again_wrong">Incorrect master password</string>
    <string name="creation_error_no_filename">Please enter a filename</string>
    <string name="creation_error_io_error">Could not create file</string>
    <string name="creation_error_file_exists">File already exists</string>
    <string name="creation_error_filename_invalid">File name is invalid</string>
    <string name="creation_error_creation_failed">Failed to create database</string>
    <string name="file_picker_label">Choose file</string>
    <string name="file_picker_updated">Last updated: %1$s</string>
    <string name="main_label">Passwords</string>
    <string name="main_title_explore">Passwords</string>
    <string name="main_title_exploring">%1$s</string>
    <string name="main_title_favorites">Favourites</string>
    <string name="main_title_all_passwords">All Passwords</string>
    <string name="main_title_search_results">Results for \'%1$s\'</string>
    <string name="main_divider_empty">No passwords</string>
    <string name="main_divider_folders">Folders</string>
    <string name="main_divider_passwords">Passwords</string>
    <string name="main_entry_subtitle_folder">%1$s</string>
    <string name="main_entry_subtitle_password">Username: %1$s</string>
    <string name="main_entry_subtitle_data">Text data</string>
    <string name="main_entry_subtitle_sorted"><b>%1$s</b>: %2$s</string>
    <string name="main_entry_subtitle_fav">\u2605 %1$s</string>
    <string name="main_copied_clipboard">Copied password to clipboard!</string>
    <string name="main_db_saved">Saved changes to database</string>
    <string name="main_error_db_save_failure">Failed to save database</string>
    <string name="main_close_dialog_title">Are you sure?</string>
    <string name="main_close_dialog_message">Are you sure you want to exit?</string>
    <string name="main_close_dialog_ok">Yes</string>
    <string name="main_close_dialog_cancel">No</string>
    <string name="main_search_title">Search Passwords</string>
    <string name="main_search_hint">Password name/description</string>
    <string name="main_nav_explore">Explore Passwords</string>
    <string name="main_nav_favorites">Favourites</string>
    <string name="main_nav_all_passwords">All Passwords</string>
    <string name="main_nav_configure">Configure Database</string>
    <string name="main_nav_close">Close Database</string>
    <string name="main_popup_favorite">Toggle favourite</string>
    <string name="main_popup_edit">Edit entry</string>
    <string name="main_popup_delete">Delete entry</string>
    <string name="main_sort_name">Name</string>
    <string name="main_sort_created">Created</string>
    <string name="main_sort_updated">Updated</string>
    <string name="entry_dialog_editing">Editing</string>
    <string name="entry_dialog_viewing">Viewing</string>
    <string name="entry_dialog_edit_btn">Edit</string>
    <string name="entry_dialog_save_btn">Save changes</string>
    <string name="entry_dialog_cancel_btn">Cancel</string>
    <string name="entry_dialog_close_btn">Close</string>
    <string name="entry_dialog_generate_btn">Generate password</string>
    <string name="entry_dialog_breach_check">Check breaches</string>
    <string name="entry_dialog_name_empty">Please choose an entry name</string>
    <string name="entry_dialog_password_empty">Please enter a password</string>
    <string name="label_entry_name">Name</string>
    <string name="hint_entry_name">Name</string>
    <string name="label_entry_password">Password (hold to copy)</string>
    <string name="hint_entry_password">Password</string>
    <string name="label_entry_username">Username</string>
    <string name="hint_entry_username">Username</string>
    <string name="label_entry_website">Website</string>
    <string name="hint_entry_website">URL or website name</string>
    <string name="label_entry_description">Description</string>
    <string name="hint_entry_description">Description of entry or notes</string>
    <string name="label_entry_created">Date Created</string>
    <string name="label_entry_updated">Date Updated</string>
    <string name="hint_entry_foldername">
        To edit folder name, tap on the name at the top of the
        screen.
    </string>
    <string name="label_entry_data">Data</string>
    <string name="hint_entry_data">Enter text data here</string>
    <string name="label_entry_flags">Password strength</string>
    <string name="breach_server_error">Failed to connect to server; service may be down</string>
    <string name="breach_io_exception">Failed to get breaches; is the internet connected?</string>
    <string name="breach_unknown_error">An unknown error occurred</string>
    <string name="breach_help_title">What is breach check?</string>
    <string name="breach_help_message">
        Breach check allows you to check securely whether your password has appeared in any breaches
        of online services. If has appeared in a breach, it is unsafe to use, as an attacker could
        easily guess it!
    </string>
    <string name="breach_help_button">OK</string>
    <string name="breach_result_title">Breach check</string>
    <string name="breach_result_breached_message">
        Password is compromised! It was found in %1$d breaches.
    </string>
    <string name="breach_result_safe_message">
        Password secure! It was found in %1$d breaches.
    </string>
    <string name="breach_result_button">OK</string>
    <string name="drive_sign_in_cancelled">To use cloud storage, you must sign in with Google</string>
    <string name="drive_sign_in_failed">Failed to sign in to Google Drive</string>
    <string name="drive_create_cancelled">Cloud file creation cancelled</string>
    <string name="drive_create_failed">Failed to create cloud file</string>
    <string name="drive_internal_error">Cloud storage failed</string>
    <string name="drive_open_file_title">Open database</string>
    <string name="pwd_flags_good_length">Minimum 12 characters</string>
    <string name="pwd_flags_has_mixed_chars">Mixed case &amp; Numbers</string>
    <string name="pwd_flags_has_symbols">Symbols</string>
    <string name="pwd_flags_not_blacklisted">Unique/uncommon password</string>
</resources>