<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="entry"
            type="android.arch.lifecycle.LiveData&lt;uk.co.davidbaxter.letmepass.model.PasswordEntry&gt;" />
        <variable
            name="viewModel"
            type="uk.co.davidbaxter.letmepass.presentation.EntryDialogViewModel" />
    </data>

    <LinearLayout
        android:minWidth="300dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/view_padding"
        android:orientation="vertical">

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_password" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editEntryPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="@{viewModel.getEditable()}"
                android:hint="@string/hint_entry_password"
                android:inputType="textPassword"
                android:text="@={entry.password}"
                android:textColor="@color/black"
                android:onTextChanged="@{viewModel::onPasswordChanged}" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password flags -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_flags" />
        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_padding"
            layout="@layout/component_pwd_flags"
            app:passwordFlags="@{viewModel.getPasswordFlags()}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/entry_dialog_breach_check"
            android:onClick="@{() -> viewModel.onBreachCheck()}"/>

        <!-- Username -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_username"
            tools:text="Username" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_entry_username"
                android:enabled="@{viewModel.getEditable()}"
                android:inputType="text"
                android:text="@={entry.username}"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <!-- Website -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_website"
            tools:text="Website" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_entry_website"
                android:enabled="@{viewModel.getEditable()}"
                android:inputType="textUri"
                android:text="@={entry.website}"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_description"
            tools:text="Description" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_entry_description"
                android:enabled="@{viewModel.getEditable()}"
                android:inputType="textMultiLine"
                android:lines="5"
                android:text="@={entry.description}"
                android:textColor="@color/black"
                android:scrollbars="vertical" />

        </android.support.design.widget.TextInputLayout>

        <!-- Created date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_created"
            tools:text="Date Created" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@{viewModel.formatDate(entry.created)}" />

        <!-- Updated date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorDisabled"
            android:text="@string/label_entry_updated"
            tools:text="Date Updated" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@{viewModel.formatDate(entry.updated)}" />

    </LinearLayout>

</layout>