<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="uk.co.davidbaxter.letmepass.presentation.IntroViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.Intro"
        tools:context="uk.co.davidbaxter.letmepass.ui.IntroActivity">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/app_version"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/button"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/intro_new"
            android:onClick="@{() -> viewModel.onNewDatabase()}"

            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button2"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/intro_load_cloud"
            android:onClick="@{() -> viewModel.onLoadCloud()}"

            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/intro_load_device"
            android:onClick="@{() -> viewModel.onLoadDevice()}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_logo" />

    </android.support.constraint.ConstraintLayout>

</layout>

